[build-system]
build-backend = "flit_core.buildapi"
requires=[
    "flit_core >= 3.12.0, <4",
    "six",
    "catt",
    "pyqt5",
    "chardet >=3.0.4",
    "pychromecast >=14.0.0",
]

[project]
name = "cattqt"
requires-python = ">=3.0"
readme = "README.rst"
dependencies = [
    "six",
    "catt",
    "pyqt5",
    "chardet >=3.0.4",
    "pychromecast >=14.0.0",
]
authors = [
    {name = "Scott Moreau", email = "oreaus@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]
description = "A control GUI for Chromecasts written using python3, catt api, pychromecast and PyQt5."
keywords = ["chromecast", "catt", "google"]

[project.urls]
Source = "https://github.com/soreau/catt-qt"

[project.scripts]
catt-qt = "cattqt:main"
